# krypto

./: CMakeLists.txt  LICENSE
cmake/: BuildSettings.cmake
src/: CMakeLists.txt  krypto.cpp  krypto_test.cpp
